# cross-platform-explorer

./: .gitignore  AGENDA-DEMO.md  AGENT-WATCH.md  CLAUDE.md  PURPOSE.md  README-DEMO.md  README.md  RELEASING.md  ROLLCALL-DEMO.md  RunClaude.cmd  STANDUP-DEMO.md  cross-platform-explorer.url  hrdrClaudeNative.cmd  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/commands/: menu-render.md  remove.md  run.md  skills-organise.md  ticketing-epic.md  ticketing-list.md  ticketing-new.md  ticketing-organize.md  ticketing-setup.md  ticketing-sprint.md  ticketing-work.md
.github/workflows/: ci.yml  model-snapshot.yml  release-sidecar.yml  release.yml
Tickets/: _template.md  wiki.md
Tickets/Backlog/: CPE-002_code-signing-windows-macos.md  CPE-003_ci-typecheck-and-first-test.md  CPE-004_breadcrumb-path-bar.md  CPE-005_keyboard-navigation.md  CPE-006_open-file-with-default-app.md  CPE-007_graceful-empty-and-denied-states.md  CPE-009_make-repository-public.md  CPE-011_backend-metadata-drives-specials.md  CPE-012_windows11-light-theme.md  CPE-013_app-shell-three-pane.md  CPE-014_nav-toolbar-history.md  CPE-015_command-bar.md  CPE-016_navigation-sidebar.md  CPE-017_details-list-columns.md  CPE-018_home-quick-access.md  CPE-019_details-pane.md  CPE-020_file-type-icons.md  CPE-021_search-and-filter.md  CPE-022_tab-bar.md  CPE-028_ci-check-rust-on-windows.md  CPE-029_multi-select.md  CPE-031_context-menu.md  CPE-032_new-folder-and-rename.md  CPE-033_delete-to-recycle-bin.md  CPE-034_clipboard-cut-copy-paste.md  (+446 more)
brand/: BRANDING.md  LICENSE.md
crates/contract/: Cargo.toml
crates/contract/src/: lib.rs
crates/net/: Cargo.toml
crates/net/examples/: client.rs  security_demo.rs
crates/net/src/: client.rs  lib.rs  server.rs  wire.rs  ws.rs
crates/security/: Cargo.toml
crates/security/src/: authn.rs  authz.rs  jwt.rs  lib.rs  transport.rs
crates/server/: Cargo.toml
crates/server/examples/: native_tags_demo.rs  search_demo.rs  template_demo.rs
crates/server/src/: action_macro.rs  activity_timeline.rs  archive.rs  audit_journal.rs  backup.rs  batch_media.rs  binary_preview.rs  checksum.rs  code_outline.rs  column_extract.rs  compare.rs  connections.rs  content_search.rs  ctx.rs  data_browser.rs  data_preview.rs  disk_usage.rs  dispatch.rs  doc_text.rs  duplicates.rs  embedder.rs  finder_tags.rs  folder_stats.rs  folder_template.rs  fs_route.rs  fsutil.rs  image_column.rs  image_preview.rs  index.rs  index_query.rs  known_hosts.rs  lib.rs  links.rs  listing.rs  location.rs  macro_library.rs  media_column.rs  media_meta_batch.rs  media_meta_edit.rs  media_meta_read.rs  (+34 more)
crates/sftp/: Cargo.toml
crates/sftp/src/: lib.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: lib.rs
crates/webdav/: Cargo.toml
crates/webdav/src/: lib.rs
docs/: MANUAL-TESTS.md  add-a-reseller.md  enterprise-networking.md  index.html  sidecar-phase0-findings.md
scripts/: organize-done.mjs  release.ps1
sidecar/: README.md
sidecar/agent-board/: Cargo.toml  README.md  sidecar.json
sidecar/agent-board/src/: board.rs  lib.rs  main.rs  ui.rs
sidecar/ai-console/: Cargo.toml  sidecar.json
sidecar/ai-console/agents/: aider.json  claude.json  codebuff.json  codex.json  gemini.json  grok.json  mistral.json  opencode.json  pi.json  qwen.json  tau.json  vtcode.json
sidecar/ai-console/docs/: adding-an-agent.md
sidecar/ai-console/resellers/: aimlapi.json  baseten.json  cerebras.json  cohere.json  deepinfra.json  deepseek.json  fireworks.json  github-models.json  glama.json  groq.json  huggingface.json  hyperbolic.json  mistral.json  nebius.json  novita.json  openrouter.json  requesty.json  sambanova.json  together.json  vercel.json  wavespeed.json
sidecar/ai-console/src/: agent_memory.rs  agent_reads.rs  agents.rs  aggregate.rs  broker_client.rs  catalog.rs  conflict.rs  console.rs  cost.rs  guardrail.rs  history.rs  http.rs  keycheck.rs  launcher.html  lib.rs  lifecycle.rs  lmstudio.rs  main.rs  mcp.rs  model_catalog.rs  model_snapshot.rs  plugins.rs  presets.rs  pty.rs  routing.rs  scope.rs  session_client.rs  session_daemon.rs  session_diag.rs  session_engine.rs  session_server.rs  session_supervisor.rs  swarm_bridge.rs  swarm_coordinator.rs  swarm_driver.rs  swarm_live.rs  swarm_locks.rs  swarm_mailbox.rs  swarm_mcp.rs  swarm_mcp_server.rs  (+5 more)
sidecar/ai-console/tests/: catalog.rs  reseller_conformance.rs  resellers.rs  session_daemon_process.rs  session_engine_daemon.rs  session_reattach_across_restart.rs  session_supervisor.rs  swarm_end_to_end.rs  swarm_mcp_server_process.rs
sidecar/contract/: Cargo.toml
sidecar/contract/src/: conformance.rs  lib.rs
sidecar/host/: Cargo.toml
sidecar/host/src/: broker.rs  catalog.rs  conformance.rs  consent.rs  enablement.rs  errors.rs  lib.rs  migrate.rs  observability.rs  reaper.rs  registry.rs  resources.rs  scaffold.rs  supervisor.rs  trust.rs
sidecar/host/src/providers/: context.rs  events.rs  mod.rs  secrets.rs  storage.rs
sidecar/host/tests/: ai_console_flow.rs  hello_sidecar_e2e.rs  keyring_roundtrip.rs  repos_manifest.rs  restart_e2e.rs  supervisor_e2e.rs
sidecar/repos/: Cargo.toml  sidecar.json
sidecar/repos/providers/: aws-codecommit.json  azure-devops.json  bitbucket.json  codeberg.json  forgejo.json  generic-git.json  gitea.json  github-enterprise.json  github.json  gitlab.json  mercurial.json  perforce.json  sourcehut.json  subversion.json
sidecar/repos/src/: browse.rs  clone.rs  conflict.rs  generic.rs  lib.rs  main.rs  protocol.rs  providers.rs  status.rs  sync.rs  ui.rs
sidecar/repos/tests/: catalog.rs  conformance.rs  handshake.rs
src/: App.features.test.ts  App.svelte  App.test.ts  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.sidecar.conf.json  tauri.sidecar.unix.conf.json  tauri.sidecar.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_shadow.rs  audit_journal.rs  forge_egress.rs  geometry.rs  keyverify.rs  lib.rs  location.rs  main.rs  models_egress.rs  server_ctx.rs  ticket_board.rs
(+1402 files in other folders)
