[package]
name = "cross-platform-explorer"
version = "0.9.0"
description = "A cross-platform file explorer with one-click install and auto-updates."
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# The library that Tauri's mobile entry point and desktop main.rs both use.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "2"

# Archive previews beyond zip (CPE-109/112/217). tar is pure-Rust; flate2 uses
# the pure-Rust miniz_oxide backend by default, so neither needs system libs in CI.
tar = "0.4"
flate2 = "1"

# Structured binary previews (CPE-210/214/215/216/218). All pure-Rust, no system
# libs: goblin (PE headers), midly (MIDI), wasmprinter (wasm->wat), serde_bencode
# (torrent metadata).
goblin = "0.8"
midly = "0.5"
wasmprinter = "0.2"
serde_bencode = "0.2"
calamine = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
parquet = { version = "53", default-features = false }
sevenz-rust = "0.6"
image = { version = "0.25", default-features = false, features = ["tiff", "png"] }
psd = "0.3"
base64 = "0.22"
iso9660 = "0.1"

# Delete must go to the OS Recycle Bin / Trash, never `fs::remove_*`. A file
# manager that irreversibly destroys data on a mis-click is dangerous (CPE-030).
trash = "5"

# The updater plugin only makes sense on desktop targets. Window-state (remember
# window size/position/maximized across restarts, CPE-228) is likewise desktop-
# only — mobile has no free-floating, user-positioned window to restore.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Keep the display awake while the app is open (CPE-225). Cross-platform screen-
# lock / screensaver / display-sleep inhibition: Windows SetThreadExecutionState,
# macOS IOPMAssertion, Linux org.freedesktop.ScreenSaver via zbus (no system dbus
# headers needed). Desktop-only — mobile has no equivalent assertion.
keepawake = "0.6"

# Windows known folders (Desktop/Documents/Pictures/...) can be redirected
# anywhere by OneDrive — on a real machine Pictures was found at
# "…\OneDrive\Exteriors Cave Homes\Pictures". No env-var heuristic can find that;
# the registry is the only authoritative source (CPE-025). This is a
# Windows-only dependency, which is exactly why CI also compiles on
# windows-latest (CPE-028).
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
# Author a real .xlsx in the spreadsheet-preview test (write side; calamine reads).
rust_xlsxwriter = "0.79"

[features]
# This feature is used for production builds where `devUrl` is disabled.
default = []
