[package]
name = "cross-platform-explorer"
version = "0.56.1"
description = "A cross-platform file explorer with one-click install and auto-updates."
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# The library that Tauri's mobile entry point and desktop main.rs both use.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The Cross-Platform Explorer Server: Tauri-free domain logic behind the `ServerCtx` seam +
# the wire contract (CPE-810/815). A normal (non-optional) dependency — it pulls only
# serde/serde_json/cpe-contract, all already in the tree, so it adds no weight to the plain
# explorer. The app is the thin adapter that provides `TauriCtx` and dispatches to it.
cpe-server = { path = "../crates/server" }
zip = "2"
# Streaming SHA-256 for the file-checksum feature (CPE-412). Pure-Rust, tiny, no system libs.
sha2 = "0.10"
# (The recursive directory-size walk that used rayon moved to `cpe-server` (CPE-815, disk_usage);
# rayon is no longer a direct app dependency.)

# Editable file timestamps (CPE-785). Pure-Rust, already in the tree transitively — this makes it direct.
filetime = "0.2"

# Optional: the sidecar platform host (ADR 0001), a standalone crate under ../sidecar.
# Compiled ONLY with the `sidecar-platform` feature, so the plain explorer builds and
# ships with zero sidecar code — the delete-test (CPE-272). One-way dependency: the app
# may use the host; the host never depends on the app.
sidecar-host = { path = "../sidecar/host", optional = true }
sidecar-contract = { path = "../sidecar/contract", optional = true }
# The Repositories sidecar's domain crate (CPE-429). Pulled in ONLY to reuse its already-tested,
# hardened `git clone` argv builder for the host `forge_clone` command (CPE-436) — same feature gate,
# so the plain explorer still ships with zero repos/clone code (the delete-test).
repos = { path = "../sidecar/repos", optional = true }

# Archive previews beyond zip (CPE-109/112/217). tar is pure-Rust; flate2 uses
# the pure-Rust miniz_oxide backend by default, so neither needs system libs in CI.
tar = "0.4"
flate2 = "1"

# (The structured binary previews goblin/midly/wasmprinter/serde_bencode moved to `cpe-server` with the
# binary_preview domain, CPE-815 — no longer direct app deps.)
calamine = "0.26"
rusqlite = { version = "0.32", features = ["bundled"] }
parquet = { version = "53", default-features = false }
sevenz-rust = "0.6"
image = { version = "0.25", default-features = false, features = ["tiff", "png", "jpeg", "gif", "webp", "bmp"] }
kamadak-exif = "0.6"
psd = "0.3"
base64 = "0.22"
# (iso9660 moved to `cpe-server` with the archive-listing domain, CPE-815 — no longer a direct app dep.)

# Live provider API-key verification for the AI Console (CPE-347). Optional + gated behind
# `sidecar-platform` so the plain explorer pulls no HTTP/TLS stack. ureq's default backend is
# pure-Rust rustls — no OpenSSL / system libs.
ureq = { version = "2", optional = true }

# Filesystem-activity watcher for Agent Watch (CPE-398). Optional + gated behind
# `sidecar-platform` so the plain explorer pulls no watcher/thread machinery — off means off
# (AGENT-WATCH.md). notify is pure-Rust on every target (ReadDirectoryChangesW / FSEvents / inotify).
notify = { version = "6", optional = true }

# Delete must go to the OS Recycle Bin / Trash, never `fs::remove_*`. A file
# manager that irreversibly destroys data on a mis-click is dangerous (CPE-030).
trash = "5"

# Free/total disk space for the status bar (CPE-403). Cross-platform (statvfs /
# GetDiskFreeSpaceExW) with no system libs; `sync` = the plain std stat functions.
fs4 = { version = "1", features = ["sync"] }

# The updater plugin only makes sense on desktop targets. Window-state (remember
# window size/position/maximized across restarts, CPE-228) is likewise desktop-
# only — mobile has no free-floating, user-positioned window to restore.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# Keep the display awake while the app is open (CPE-225). Cross-platform screen-
# lock / screensaver / display-sleep inhibition: Windows SetThreadExecutionState,
# macOS IOPMAssertion, Linux org.freedesktop.ScreenSaver via zbus (no system dbus
# headers needed). Desktop-only — mobile has no equivalent assertion.
keepawake = "0.6"

# Windows known folders (Desktop/Documents/Pictures/...) can be redirected
# anywhere by OneDrive — on a real machine Pictures was found at
# "…\OneDrive\Exteriors Cave Homes\Pictures". No env-var heuristic can find that;
# the registry is the only authoritative source (CPE-025). This is a
# Windows-only dependency, which is exactly why CI also compiles on
# windows-latest (CPE-028).
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
# Windows file attributes (hidden/system/archive) for the attributes editor (CPE-785). Version matches the
# copy Tauri already pulls in, so it's not a second `windows` crate in the tree.
windows = { version = "0.56", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
# Author a real .xlsx in the spreadsheet-preview test (write side; calamine reads).
rust_xlsxwriter = "0.79"
# Temp dirs for filesystem tests (e.g. the Agent Board project-root walk-up, CPE-554).
tempfile = "3"

[features]
# This feature is used for production builds where `devUrl` is disabled.
default = []
# Opt-in sidecar platform integration (ADR 0001 / CPE-260). OFF by default so the plain
# explorer compiles and ships with no sidecar code whatsoever — the delete-test (CPE-272).
sidecar-platform = ["dep:sidecar-host", "dep:sidecar-contract", "dep:ureq", "dep:notify", "dep:repos"]
