[package]
name = "cpe-security"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Pluggable, composable security core (Transport/AuthN/AuthZ planes + default-deny chain) at the Cross-Platform Explorer contract boundary (CPE-810/816)."
license = "MIT"

# Deliberately standalone and Tauri-free (CPE-810): the security layer sits at the
# contract boundary as a distinct, swappable layer — the Server logic stays
# security-agnostic and receives an already-authorized request. Depends only on the
# wire contract (`cpe-contract`) for the Principal/session identity, so it stays
# headless-testable and out of any workspace (preserving the one-way boundary).

[dependencies]
cpe-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Concrete HS256 JWT verifier (CPE-965), OFF by default so the security CORE stays dependency-light — the
# JWT/crypto machinery is opt-in, as CPE-816/817 intended. All pure-Rust, no system libs.
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }

[features]
# Opt-in concrete `HmacJwtVerifier` (HS256) implementing the AuthN `TokenVerifier` trait (CPE-965).
jwt = ["dep:hmac", "dep:sha2", "dep:base64"]
