[package]
name = "cpe-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "The Cross-Platform Explorer Server: Tauri-free domain logic behind the ServerCtx runtime seam + the contract envelope (CPE-810/815)."
license = "MIT"

# The pure Server (CPE-810). Holds domain logic that depends only on the runtime
# seam (`ctx::ServerCtx`, CPE-814) and the wire contract (`cpe-contract`, CPE-811) —
# never on Tauri — so it is headless- and remote-runnable. The Tauri app is a thin
# adapter that provides a `TauriCtx` and dispatches to this crate. Standalone (out of
# any workspace) to keep that one-way boundary, like `sidecar/contract`.

[dependencies]
cpe-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Streaming SHA-256 for file checksums / integrity baselines (CPE-412/791). Pure-Rust, no system libs.
sha2 = "0.10"
# Work-stealing parallelism for the recursive directory-size walk (CPE-754). Pure-Rust.
rayon = "1"
# Archive listing (CPE-064/109/110/113) — browse into an archive's directory without extracting. All
# pure-Rust, no system libs: zip, tar, flate2 (miniz_oxide backend), sevenz-rust, iso9660.
zip = "2"
tar = "0.4"
flate2 = "1"
sevenz-rust = "0.6"
iso9660 = "0.1"
# Structured binary previews (CPE-210/214/215/216/218). All pure-Rust: goblin (PE headers), midly
# (MIDI), wasmprinter (wasm->wat), serde_bencode (torrent metadata).
goblin = "0.8"
midly = "0.5"
wasmprinter = "0.2"
serde_bencode = "0.2"

[dev-dependencies]
# Temp dirs for the ticket-board tests (moved from the app with the module, CPE-815).
tempfile = "3"
