[package]
name = "cpe-sftp"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "SFTP FileSystemProvider for the Cross-Platform Explorer (epic CPE-616): a remote backend over SSH/SFTP, with host-key verification via cpe-server::known_hosts. Async (russh) isolated here so the lean cpe-server core stays std-only + sync."
license = "MIT"

# Isolates the async + network + crypto dependency surface (russh/tokio) from the lean, std-only
# cpe-server domain crate: this crate depends on cpe-server for the FileSystemProvider trait + the
# known_hosts host-key verifier, and presents a SYNC provider by driving russh on a small internal
# runtime. Standalone (out of any workspace), like the sibling crates.

[dependencies]
cpe-server = { path = "../server" }
# `ring` crypto backend (not the default aws-lc-rs): self-contained pure-Rust/asm, so no NASM/cmake
# is needed to build on the Windows CI leg. Keep flate2 (compression) + rsa (server RSA host keys).
russh = { version = "0.54", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "net", "sync", "time", "macros"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
# The in-process test server generates an ephemeral Ed25519 host key (ssh-key uses rand_core 0.6).
rand_core = { version = "0.6", features = ["getrandom"] }
