[package]
name = "ai-console"
version = "0.1.0"
edition = "2021"
description = "The AI Console sidecar for Cross-Platform Explorer — an agentic CLI manager (CPE-261)."
license = "MIT"

# A sidecar depends ONLY on the contract (ADR 0001 one-way rule) — never on the host
# or the explorer. Its own domain logic (agent registry, provider routing, secret
# vault, …) lives in this crate's lib; the process entry is `src/main.rs`.

[dependencies]
sidecar-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The embedded terminal (CPE-280): a real pseudo-terminal so interactive agent TUIs
# (claude, aider, …) run in-app. Cross-platform: Windows ConPTY, Unix openpty.
portable-pty = "0.8"

# Base64-encode raw PTY bytes for the terminal transport, so the browser's xterm.js gets
# the exact byte stream (ANSI + partial UTF-8) intact rather than lossy text (CPE-333).
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
