[package]
name = "sidecar-host"
version = "0.1.0"
edition = "2021"
description = "Host-side sidecar platform logic for Cross-Platform Explorer: manifest registry, negotiation, brokering (CPE-260)."
license = "MIT"

# Pure platform logic, testable in isolation. Depends only on the contract; the
# explorer wires this in later behind a feature flag (CPE-272), so the delete-test
# holds — removing sidecars never touches the explorer build.

# Release-time catalog signer (CPE-377): builds + signs the agent-catalog bundle.
[[bin]]
name = "catalog-sign"
path = "src/bin/catalog_sign.rs"

[dependencies]
sidecar-contract = { path = "../contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Manifest trust & signing (CPE-295). All pure-Rust, no system libs: ed25519 for
# first-party signature verification, sha2 for content hashing, hex for encoding.
ed25519-dalek = "2"
sha2 = "0.10"
hex = "0.4"

# Per-sidecar memory sampling for resource budgets (CPE-297).
sysinfo = "0.30"

# Random per-launch channel tokens (CPE-275).
getrandom = "0.2"

# Secrets capability (CPE-268) is backed by the OS credential store. The provider is
# backend-agnostic (see providers::secrets), so the default build/tests use an
# in-memory backend; the real KeyringBackend compiles only where a native store is
# configured. Windows now; macOS/Linux store features are added when built there.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

# macOS Keychain via the Security framework (CPE-322). Pure system framework — no extra libs.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

# Linux Secret Service over D-Bus (GNOME Keyring / KWallet), CPE-322. `sync-secret-service` uses
# zbus (pure-Rust D-Bus, no libdbus); `crypto-rust` keeps the session crypto pure-Rust (no OpenSSL).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }

[dev-dependencies]
tempfile = "3"
